updated icon and added meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Dent Dude</title>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/star.png" />
+    <meta name='keywords' content='Dent Dude, Paintless Dent Removal, PDR, Fender Shaving, Auto Repair, Body Damage Repair'/>
+    <link rel="icon" href="%PUBLIC_URL%/car.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Dent Dude PDR Services"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/star.png" />
+    <meta name="description" content="Dent Dude PDR Services" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/car.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/star.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/car.png" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -30,7 +29,6 @@
 			href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,500&display=swap"
 			rel="stylesheet"
 		/>
-    <title>Dent Dude</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
