updated font styling and weights

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Dent Dude</title>
     <meta charset="utf-8" />
     <meta name='keywords' content='Dent Dude, Paintless Dent Removal, PDR, Fender Shaving, Auto Repair, Body Damage Repair'/>
     <link rel="icon" href="%PUBLIC_URL%/car.png" />
@@ -25,10 +24,8 @@
     -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap"
-			rel="stylesheet"
-		/>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <title>Dent Dude</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
