--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name='keywords' content='Dents N Dings, Paintless Dent Removal, PDR, Fender Shaving, Auto Repair, Body Damage Repair, Dent Dude'/>
-    <link rel="icon" href="%PUBLIC_URL%/car.png" />
+    <link rel="icon" href="%PUBLIC_URL%/DDlogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Dents N Dings providing the finest in Paintless Dent Removal Services" />
     <meta property="og:title" content="Dents N Dings" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/car.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/DDlogo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
