--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name='keywords' content='Dents N Dings, Paintless Dent Removal, PDR, Fender Shaving, Auto Repair, Body Damage Repair, Dent Dude'/>
     <link rel="icon" href="%PUBLIC_URL%/DDlogo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1 viewport-fit=cover"/>
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Dents N Dings providing the finest in Paintless Dent Removal Services" />
     <meta property="og:title" content="Dents N Dings" />
